@@ -1,5 +1,8 @@
 2007-12-19  Andreas Kirschbaum
 
+	* Use different background colors for active and inactive text
+	input fields.
+
 	* Close message window after command input if it was opened
 	automatically.
 
